# phd-code

./: .gitignore
cxx/: CMakeLists.txt  init.mac
cxx/dataforge/include/: Binary.hh  Envelope.hh  EnvelopeFormat.hh  RandomAccessBinary.hh  SimpleEnvelope.hh  TaggedEnvelopeFormat.hh
cxx/dataforge/src/: SimpleEnvelope.cc  TaggedEnvelopeFormat.cc
cxx/general/: CMakeLists.txt  dataforge.cc  init.mac  install.sh  test.cc  test.gdml
cxx/general/include/: DataCell.hh  DataFileManager.hh  DataOutput.hh  DataStorage.hh  FileUtils.hh  G4DFClient.hh  G4DFClientMessenger.hh  G4Server.hh  Histogramm.hh  IFieldFactory.hh  ParticleField.hh  ProtoWrapper.hh  SerializeHistogram.hh  ServerSettings.hh  SocketOutput.hh  histogram.pb.h
cxx/general/include/dataforge/: ArrayBinary.hh  Binary.hh  IOFormat.hh  SimpleEnvelope.hh  TaggedEnvelopeFormat.hh
cxx/general/proto/: histogram.proto
cxx/general/src/: DetectorConstruction.cc  G4DFClient.cc  G4DFClientMessenger.cc  SerializeHistogram.cc  histogram.pb.cc
cxx/proto/: histogram.proto  satellite.proto  thunderstorm.proto  update_python_proto.sh
cxx/satellite/: CMakeLists.txt  main.cc
cxx/satellite/gdml/: satellite.gdml  satellite_anthracene.gdml
cxx/satellite/include/: DataSatellite.hh  RunAction.hh  SatelliteMessenger.hh  SensitiveScoredDetector.hh  Settings.hh  satellite.pb.h
cxx/satellite/macros/: init.mac  init_sum.mac
cxx/satellite/src/: ActionInitialization.cc  RunAction.cc  SatelliteMessenger.cc  SensitiveScoredDetector.cc  satellite.pb.cc
cxx/tests/: CMakeLists.txt
cxx/tests/hist/: CMakeLists.txt  testHist.cc
cxx/thunderstorm/: CMakeLists.txt  init.mac  init_vis.mac  main.cc
cxx/thunderstorm/gdml/: NeutronFullAtmosphere.gdml  SpaceCraftFullAtmosphere.gdml  diff_models_0.gdml  dwyer2003.gdml  empty.gdml  reversed.gdml
cxx/thunderstorm/include/: ActionInitialization.hh  ConcentrationSteppingAction.hh  Data.hh  DataManager.hh  DataThunderstorm.hh  Dwyer2003StackingAction.hh  EventAction.hh  FieldFactory.hh  OneGenerationStackingAction.hh  PARMAPrimaryGenerator.hh  Parma.hh  ParticleCylinderStacking.hh  ParticleDetector.hh  ParticlePredictor.hh  PhysicsList.hh  RunAction.hh  SensitiveDetectorFactory.hh  Settings.hh  SimpleCutStackingAction.hh  StackingAction.hh  SteppingAction.hh  ThunderstormConstruction.hh  ThunderstormMessenger.hh  TrackingAction.hh  TreeSocketSteppingAction.hh  TreeSocketTrackingAction.hh  TreeTrackingAction.hh  thunderstorm.pb.h
cxx/thunderstorm/macros/: aragats.mac  aragats_muon.mac  diff_model.mac  dwyer2003.mac  reversed.mac  run.mac  run_critical_energy.mac  run_neutron.mac  run_neutron_exp.mac  run_supervise_tree.mac  socket.mac
cxx/thunderstorm/macros/aragats/: corsika_06.26.gps  parma.mac
cxx/thunderstorm/proto/: thunderstorm.proto
cxx/thunderstorm/run/: init.mac
cxx/thunderstorm/src/: ActionInitialization.cc  ConcentrationSteppingAction.cc  Dwyer2003StackingAction.cc  EventAction.cc  FieldFactory.cc  OneGenerationStackingAction.cc  Parma.cc  ParticleCylinderStacking.cc  ParticleDetector.cc  ParticlePredictor.cc  PhysicsList.cc  SensitiveDetectorFactory.cc  SimpleCutStackingAction.cc  StackingAction.cc  SteppingAction.cc  ThunderstormConstruction.cc  ThunderstormMessenger.cc  TrackingAction.cc  TreeSocketSteppingAction.cc  TreeSocketTrackingAction.cc  TreeTrackingAction.cc  thunderstorm.pb.cc
kotlin/satellite/: build.gradle.kts  settings.gradle.kts
notebooks/: 01.PhD-fugures.ipynb  02.DiffModels.ipynb  02.PhD-figures.ipynb  03.Near_critical.ipynb  04.AYSS-2018.04.ipynb  05.Dwyer2003.ipynb  06.Reversed.ipynb  06.ReversedEnergy.ipynb  06.Reversed_Qt.ipynb  07.GammaScatter.ipynb  07.eBremm.ipynb  08.FeedbackCoef.ipynb  09.TreeOptimization.ipynb  10.GidroMeteor.ipynb  11.Oreshikn.ipynb  12.OreshiknGurevich.ipynb  13.GurevichLambda.ipynb  14.JoinDataPLASMA2020.ipynb  15.ProbabilitySimulation.ipynb  16.Sattelite.ipynb  17.Aragats_2020.06.03.ipynb  18.Satelite.ipynb  19.Satellite.ipynb  20.Aragats_muon.ipynb  21.RREA_1.ipynb  22.NeutronCheebes.ipynb  24.Satellite_real_data.ipynb
python/: README.md  setup.py
python/another/: root.py
python/data_saving/: corsika.py  electric_field_generation.py  hdf5_exporter.py  old_satelite.py  oreshkin_convert.py  read_proto.py  satelite_read_hdf.py  satellite_client.py  task_generator.py  tree_socket.py
python/data_saving/PARMA/: parma.py
python/phd/satellite/: covert_to_hdf5.py  geant4_server.py  mean_table.py  run.py  satellite_pb2.py  scr.py  single_processing.py
python/phd/satellite/processing/: likelihood.py  likelihood_factory.py  (+1 more)
python/phd/thunderstorm/: atmosphere.py  convert_to_hdf5.py  critical_energy.py  dwyer_feedback.py  dwyer_plots.py  electric_field.py  for_runs.py  gurevich_length.py  kotlin_rltge_prototype.py  minimal_field.py  thunderstorm_pb2.py  tree_chain.py
python/phd/utils/: __init__.py  convertor_tools.py  gdml.py  hdf5_tools.py  hep_tools.py  histogram_pb2.py  path_tools.py  proto_list.py  run_tools.py
python/simulation_scripts/: grep_log.py
python/simulation_scripts/satellite/: convert_to_mean.py  satellite_0.py  satellite_1.py  satellite_wrapper.py  save_interpolators.py  test_reconstruction_3.py  test_recontruction.py  test_recontruction_1.py
python/simulation_scripts/thunderstorm/: convert.py  critical_energy_process.py  critical_energy_script.py  critical_energy_script_1.py  critical_energy_script_2.py  critical_energy_script_3.py  diff_models_0.py  dwyer2003.py  dwyer2003_0.py  dwyer2003_1.py  dwyer2003_2_5km.py  minimal_energy_process.py  minimal_field_process.py  minimal_field_script_1.py  minimal_field_script_2.py  near_critical.py  neutron.py  reversed.py  reversed_grid.py  test_run.py
python/tests/satellite/: test_likelihood.py  test_mean_item.py  test_phd_plots.py  test_server.py  test_single_processing.py
python/tests/thunderstorm/: AtmosphereTest.py  histDwyer2003.txt  test_atmosphere.py  test_convertors.py  test_critical_energy.py  test_dwyer_feedback.py
python/tests/utils/: test_cin_server.py  test_gdml.py  test_path_tools.py  test_proto_list.py  test_run_tools.py
(+16 files in other folders)
